dodanie stylów przycisków, dodanie overlay na obrazy galerii, dodanie boksa z aktywnymi filtrami

--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
 
 </head>
 <body>
-<div class="grid">
-    <header class="header">
-        <h1>Superheroes</h1>
-    </header>
-    <main class="gallery"></main>
-    <aside class="filters">
-        <h2>Filters</h2>
-    </aside>
-    <footer class="footer">footer</footer>
-</div>
-<div id="gallery"></div>
 
-<input id="tagInput" type="text" placeholder="Enter tag here">
-<br>
-<button id="showButton">Show</button>
-<button id="hideButton">Hide</button>
+    <div class="grid">
+        <header class="header">
+            <div class="header__box">
+                <h1 class="header__title">Superheroes</h1>
+            </div>
+        </header>
+        <main class="gallery"></main>
+        <aside class="filters">
+            <h2 class="filters__header">Filters</h2>
+        </aside>
+        <footer class="footer">footer</footer>
+    </div>
+
 </body>
 <script type="text/javascript" src="js/app.js"></script>
 </html>
