dodanie footera, zmiana jednostek fontów w filtrach na vw

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <div class="grid">
         <header class="header">
             <div class="header__box">
-                <h1 class="header__title">Superheroes</h1>
+                <h1 class="header__title">Superheroes gallery</h1>
             </div>
         </header>
         <main class="gallery"></main>
         <aside class="filters">
             <h2 class="filters__header">Filters</h2>
         </aside>
-        <footer class="footer">footer</footer>
+        <footer class="footer">
+            <div class="footer__box"></div>
+        </footer>
     </div>
 
 </body>
